# ProxyPOP3

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  admin_actions.c  admin_response.h  admin_serializer.h  buffer.h  cmake_install.cmake  correr_tests.txt  delimiter.h  deserializer.h  input_parser.c  main.c  metrics.h  pop3ctl  pop3filter  queue.c  request.c  request.h  request_parser.c  response.h  response_parser.h  selector.h  stm.c  stm.h  stripmime  utils.c  utils.h
admin_client/: admin.c  deserializer.c  input_parser.c  main.c  receive_response.c  send_request.c  serializer.c  utils.c
admin_client/include/: admin.h  deserializer.h  receive_response.h  response.h  send_request.h  serializer.h  utils.h
administrator/: administrator.c  input_parser.c  main.c
administrator/include/: administrator.h  input_parser.h
configurationClient/: administrator.c  configurationClient.c  deserializer.c  input_parser.c  main.c  optionsParser.c  receive_response.c  send_request.c  serializer.c  utils.c
configurationClient/include/: administrator.h  configurationClient.h  deserializer.h  input_parser.h  optionsParser.h  receive_response.h  request.h  response.h  send_request.h  serializer.h  utils.h
docs/: Informe_Grupo3.docx
mails/: 64kb_2,S
mimeFilter/: delimiter.h  frontier.c  frontier.h  mimeFilter.c  mimeFilter.h  mimeList.c  mimeList.h  mime_msg.c  mime_msg.h  mime_type.c  mime_type.h  parser_creator.c  parser_creator.h  parser_utils.h  stack.c  stack.h
mime_filter/: delimiter.c  mime_chars.c  mime_filter.c  mime_list.c  mime_msg.c  mime_type.c  multi_pop3_parser.c  parser_creator.c  parser_utils.c  pop3_multi.dot  stack.c  test
mime_filter/include/: delimiter.h  mime_chars.h  mime_filter.h  mime_list.h  mime_msg.h  mime_type.h  multi_pop3_parser.h  parser_creator.h  parser_utils.h  stack.h
pop3ctl/: admin.c  administrator.c  deserializer.c  input_parser.c  main.c  receive_response.c  send_request.c  serializer.c  test  utils.c
pop3ctl/include/: client_request.h  deserializer.h  input_parser.h  response.h  send_request.h
pop3filter/: admin.c  admin_actions.c  admin_parse_response.c  admin_parser_request.c  admin_serializer.c  buffer.c  client_parser_request.c  client_parser_response.c  client_request.c  client_request_utils.c  client_response.c  e_transformation.c  filter_list.c  hello  input_parser.c  main.c  msg_queue.c  parser.c  pop3_handler.c  pop3_multi.c  pop3nio.c  stm.c
pop3filter/include/: admin.h  admin_actions.h  admin_request.h  admin_response.h  admin_serializer.h  client_parser_request.h  client_parser_response.h  client_request.h  e_transformation.h  filter_list.h  input_parser.h  metrics.h  msg_queue.h  pipelining.h  pop3_handler.h  pop3nio.h
proxy/: admin.c  admin.h  admin_actions.c  admin_deserializer.c  admin_parse_response.c  admin_parser_request.c  admin_responses.c  admin_serializer.c  administrator.c  buffer.c  client_parser_request.c  client_parser_response.c  client_request.c  client_request_utils.c  client_request_utils.h  clients.c  deserializer.c  external_transformation.c  handler.c  input_parser.c  main.c  media_types_utils.c  metrics.c  msg_queue.c  optionsParser.c  parse_helpers.c  parser.c  pipelining.c  pop3.c  pop3_multi.c  pop3_session.c  pop3_session.h  pop3nio.c  proxypop3.c  queue.c  queue.h  request.c  request_parser.c  response.c  response_parser.c  (+5 more)
proxy/include/: admin.h  admin_actions.h  admin_parser.h  admin_request.h  administrator.h  buffer.h  client_parser_request.h  client_parser_response.h  client_request.h  client_request_utils.h  clients.h  deserializer.h  external_transformation.h  handler.h  input_parser.h  main.h  media_types_utils.h  metrics.h  optionsParser.h  parse_helpers.h  parser.h  pop3.h  pop3_multi.h  pop3_session.h  pop3nio.h  proxypop3.h  queue.h  request.h  request_admin.h  request_parser.h  response.h  response_admin.h  response_parser.h  selector.h  serializer.h  stm.h  utils.h
proxy_pop3/: admin.c  admin_actions.c  admin_deserializer.c  admin_parse_response.c  admin_parser_request.c  admin_serializer.c  client_parser_request.c  client_parser_response.c  client_request.c  client_request_utils.c  client_response.c  client_response_utils.c  external_transformation.c  filter_list.c  input_parser.c  logs.c  main.c  metrics.c  msg_queue.c  pipelining.c  pop3_handler.c  pop3_multi.c  pop3_session.c  pop3nio.c  selector.c  stm.c  utils.c
proxy_pop3/include/: admin.h  admin_actions.h  admin_deserializer.h  admin_parser.h  admin_request.h  admin_response.h  client_parser_request.h  client_parser_response.h  client_request.h  client_request_utils.h  client_response.h  client_response_utils.h  external_transformation.h  filter_list.h  input_parser.h  logs.h  msg_queue.h  parser.h  pop3_handler.h  pop3_session.h  pop3nio.h  selector.h  stm.h  utils.h
stripmime/: delimiter.c  mime_chars.c  mime_chars.h  mime_filter.c  mime_list.c  mime_list.h  mime_msg.c  mime_msg.dot  mime_msg.h  mime_type.c  mime_type.h  multi_pop3_parser.c  parser_creator.c  parser_creator.h  parser_utils.c  stack.c  stack.h
stripmime/include/: mime_chars.h  mime_filter.h  mime_list.h  multi_pop3_parser.h  parser_creator.h
test_cases/: i_big.head  ii_images.mbox  iii_images_fwd.mbox  minitest.mbox  out  prueba.mbox  prueba2.mbox
